# next_gis

./: CMakeLists.txt  README.md
include/geometry/: geometry.h  linestring.h  point.h  polygon.h
src/: main.cpp
